--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev -p 3001",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 3001",
     "lint": "next lint"
   },
   "dependencies": {
@@ -15,7 +15,7 @@
     "@emotion/styled": "^11.13.0",
     "@heroicons/react": "^2.1.5",
     "@hookform/resolvers": "^3.9.1",
-    "@material-tailwind/react": "^2.1.10", 
+    "@material-tailwind/react": "^2.1.10",
     "@mui/material": "^6.1.7",
     "@nextui-org/table": "^2.0.40",
     "@reduxjs/toolkit": "^2.3.0",
@@ -28,12 +28,11 @@
     "cloudinary": "^2.5.1",
     "formik": "^2.4.6",
     "iconoir-react": "^7.10.0",
-    "jodit-react": "^4.1.2",
+    "jodit-react": "^5.2.19",
     "jspdf": "^2.5.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.460.0",
     "mongoose": "^8.8.1",
-    "multer": "^1.4.5-lts.1",
     "next": "^15.0.3",
     "next-auth": "^4.24.10",
     "react": "^18.3.1",
